# CoolConvNN

./: CMakeLists.txt  ConvLayer.cpp  ConvLayer.h  ConvNeuralNet.cpp  ConvNeuralNet.h  DataSetOrganizer.cpp  DataSetOrganizer.h  LICENSE  Layer.cpp  Layer.h  Makefile  Matrix.cpp  Matrix.h  NeuralNet.cpp  NeuralNet.h  PoolLayer.cpp  PoolLayer.h  README.md  activations_layer.c  activations_layer.h  bn_layer.c  bn_layer.h  cnn.c  cnn.h  cnn_c  conv_layer.c  conv_layer.h  cool_nn.c  cool_nn.h  cora_link_prediction.ipynb  fc_layer.c  fc_layer.h  gemm.c  gemm.h  image.c  image.cpp  image.h  main.c  main.cpp  matrix.c  (+11 more)
png2array/: a.out  png2array.c  png2array.cpp  png2array.h
